精简到仅提供Struct/Union核心功能